<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81c784"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Questions">

            <TextView
                style="@style/QuestionsHeading"
                android:text="Question 1" />

            <TextView
                style="@style/QuestionsText"
                android:text="@string/question1"/>

            <RadioGroup
                android:id="@+id/question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/QuestionsText"
                    android:text="@string/question1_1" />

                <RadioButton
                    style="@style/QuestionsText"
                    android:text="@string/question1_2" />

                <RadioButton
                    style="@style/QuestionsText"
                    android:text="@string/question1_3" />

                <RadioButton
                    style="@style/QuestionsText"
                    android:text="@string/question1_4" />

            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            style="@style/Questions">

            <TextView
                style="@style/QuestionsHeading"
                android:text="Question 2" />

            <TextView
                android:id="@+id/question_2"
                style="@style/QuestionsText"
                android:text="@string/question2"/>

                <CheckBox
                    android:id="@+id/question_2_1"
                    style="@style/QuestionsText"
                    android:text="@string/question2_1" />

                <CheckBox
                    android:id="@+id/question_2_2"
                    style="@style/QuestionsText"
                    android:text="@string/question2_2" />

                <CheckBox
                    android:id="@+id/question_2_3"
                    style="@style/QuestionsText"
                    android:text="@string/question2_3" />

                <CheckBox
                    android:id="@+id/question_2_4"
                    style="@style/QuestionsText"
                    android:text="@string/question2_4" />

        </LinearLayout>

        <LinearLayout
            style="@style/Questions">

            <TextView
                style="@style/QuestionsHeading"
                android:text="Question 3" />

            <TextView
                style="@style/QuestionsText"
                android:text="@string/question3"/>

            <RadioGroup
                android:id="@+id/question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/QuestionsText"
                    android:text="@string/question3_1" />

                <RadioButton
                    style="@style/QuestionsText"
                    android:text="@string/question3_2" />

                <RadioButton
                    style="@style/QuestionsText"
                    android:text="@string/question3_3" />

                <RadioButton
                    style="@style/QuestionsText"
                    android:text="@string/question3_4" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/Questions">

            <TextView
                style="@style/QuestionsHeading"
                android:text="Question 3\4" />

            <TextView
                style="@style/QuestionsText"
                android:text="@string/question4"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_4"
                android:textColor="#FFFFFF"
                android:hint="@string/question4_hint"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_below="@id/questions"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:onClick="submit"/>

</RelativeLayout>

</ScrollView>